--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
+        "truffle-contract": "^3.0.3",
         "web3": "0.20.5"
     }
 }
