--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "b9lab-nodejs-example",
+    "name": "metacoin-nodejs",
     "version": "0.0.1",
     "private": true,
     "dependencies": {
