--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "ethereumjs-util": "^5.1.4",
+        "growl": "^1.10.5",
         "truffle-contract": "^3.0.3",
         "web3": "0.20.5"
     }
